fix blogs content