@@ -1,30 +1,88 @@
 ---
-title: "Object Reflection: How Java Reflection Works (CTCI 13.4)"
-description: "CTCI problem 13.4: how Java Reflection API allows inspecting classes, invoking methods, and instantiating objects at runtime."
-date: "2026-01-07"
+title: "ऑब्जेक्ट रिफ्लेक्शन (Object Reflection): जावा में रनटाइम इंट्रोस्पेक्शन और डायनामिक इनवोकेशन (सीटीसीआई १३.४)"
+description: "जावा रिफ्लेक्शन एपीआई (Reflection API), रनटाइम क्लास मेटाडेटा, एनोटेशन स्कैनिंग, डिपेंडेंसी इंजेक्शन और फ्रेमवर्क आर्किटेक्चर का गहन विश्लेषण।"
+date: "2026-05-06"
 tags: [एल्गोरिदम और डेटा संरचनाएं]
 coverImage: /assets/images/ctci-13-4-object-reflection.webp
 previewImage: /assets/images/ctci-13-4-object-reflection.webp
 ---
 
-
 > **टीएल;डीआर**
-> * **समस्या:** सीटीसीआई समस्या १३.४ का तकनीकी विवरण।
-> * **दृष्टिकोण:** सीटीसीआई problem १३.४: how जावा Reflection एपीआई allows inspecting classes, invoking methods, and instantiating objects at runtime.
-> * **जटिलता:** इष्टतम समय और मेमोरी संतुलन।
+> * **किताब का सवाल:** जावा में ऑब्जेक्ट रिफ्लेक्शन (Object Reflection) क्या है और यह क्यों उपयोगी है?
+> * **मुख्य समाधान:** **रनटाइम इंट्रोस्पेक्शन और डायनामिक मेटाप्रोग्रामिंग**: (१) रिफ्लेक्शन एपीआई (`java.lang.reflect.*`) एक निष्पादित प्रोग्राम को रनटाइम पर क्लासेस, कंस्ट्रक्टर्स, मेथड्स और फ़ील्ड्स का निरीक्षण करने, उन्हें इंस्टैंशिएट करने और मेथड कॉल करने की अनुमति देती है, बिना कंपाइल-टाइम पर उनके नाम जाने; (२) **प्रमुख संचालन**: `Class.forName()` द्वारा क्लास लोड करना, `setAccessible(true)` द्वारा प्राइवेट सदस्यों तक पहुंचना और `method.invoke()` द्वारा मेथड चलाना; (३) **उपयोग**: डिपेंडेंसी इंजेक्शन (Spring Core), ओआरएम मैपिंग (Hibernate) और जेसन सीरियलाइज़ेशन (Jackson); (४) **कमियां**: JIT इनलाइनिंग बंद होने से प्रदर्शन धीमा होता है और कंपाइल-टाइम टाइप सुरक्षा समाप्त हो जाती है।
+> * **रियल-वर्ल्ड सिस्टम:** स्प्रिंग बूट (Spring Boot) इनवर्जन ऑफ कंट्रोल कंटेनर और JUnit टेस्ट रनर।
 
-तकनीकी साक्षात्कार में आपसे समस्या **१३.४** पूछी जाती है। प्रारंभिक समाधान सीधा दिखता है, लेकिन वास्तविक सिस्टम में समय और मेमोरी की दक्षता अनिवार्य होती है। यहाँ इसका स्पष्ट मानसिक मॉडल, संपूर्ण कोड और मुख्य सावधानियाँ दी गई हैं।
+## १. किताब का सवाल और संदर्भ
 
-## १. संदर्भ और समस्या कथन
-सीटीसीआई problem १३.४: how जावा Reflection एपीआई allows inspecting classes, invoking methods, and instantiating objects at runtime.
+*क्रैकिंग द कोडिंग इंटरव्यू* (समस्या १३.४) में पूछा गया है:
 
-## २. कोड और कार्यान्वयन
+*"जावा में ऑब्जेक्ट रिफ्लेक्शन क्या है, यह एंटरप्राइज फ्रेमवर्क में क्यों उपयोगी है और इसके प्रदर्शन संबंधी क्या प्रभाव हैं?"*
+
+## २. रिफ्लेक्शन एपीआई की मुख्य क्षमताएं
+
+जेवीएम मेटास्पेस (Metaspace) में लोड की गई क्लास के मेटाडेटा का विश्लेषण:
+* रनटाइम पर ऑब्जेक्ट बनाना (`Constructor.newInstance()`)।
+* प्राइवेट फ़ील्ड्स को पढ़ना और बदलना (`Field.set()`)।
+* मेथड को डायनामिक रूप से कॉल करना (`Method.invoke()`)।
+
+## प्रोडक्शन कार्यान्वयन
 
 ```java
-Class<?> clazz = Class.forName("com.example.MyClass");
-Method method = clazz.getMethod("doSomething");
-method.invoke(clazz.getDeclaredConstructor().newInstance());
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.reflect.Field;
+
+@Retention(RetentionPolicy.RUNTIME)
+@interface AutoInject {}
+
+public class ReflectionEngine {
+
+    public static class DatabaseService {
+        public void execute(String query) {
+            System.out.println("SQL निष्पादन: " + query);
+        }
+    }
+
+    public static class OrderController {
+        @AutoInject
+        private DatabaseService dbService; // रिफ्लेक्शन द्वारा प्राइवेट इंजेक्शन
+
+        public void process(String id) {
+            dbService.execute("INSERT INTO orders VALUES (" + id + ")");
+        }
+    }
+
+    public static <T> T createAndInject(Class<T> clazz) throws Exception {
+        T instance = clazz.getDeclaredConstructor().newInstance();
+
+        for (Field field : clazz.getDeclaredFields()) {
+            if (field.isAnnotationPresent(AutoInject.class)) {
+                field.setAccessible(true); // प्राइवेट सुरक्षा को बायपास करें
+                Object dep = field.getType().getDeclaredConstructor().newInstance();
+                field.set(instance, dep);
+            }
+        }
+
+        return instance;
+    }
+}
 ```
 
-## ३. सारांश और एज केसेस
-हमेशा सीमांत स्थितियों और शून्य इनपुट की जांच करें।
+## उपयोग के मामले और प्रदर्शन प्रभाव
+
+| क्षमता | फ्रेमवर्क में मुख्य उपयोग | प्रदर्शन प्रभाव |
+|---|---|---|
+| **एनोटेशन स्कैनिंग** | Spring `@Autowired`, JUnit `@Test` | सर्वर स्टार्टअप समय में थोड़ी वृद्धि। |
+| **प्राइवेट फ़ील्ड एक्सेस** | Jackson JSON, Hibernate ORM | एनकैप्सुलेशन तोड़ता है; जावा 9+ में प्रतिबंधित (`--add-opens`)। |
+| **डायनामिक इनवोकेशन** | AOP प्रॉक्सी और ट्रांसएक्शनल इंटरसेप्टर | JIT कंपाइलर इनलाइनिंग को अक्षम करता है। |
+
+## वास्तविक दुनिया में सिस्टम इंजीनियरिंग उपयोग
+
+### प्रोडक्शन सिस्टम आर्किटेक्चर: MethodHandles और जावा 9 मॉड्यूल
+
+१. **`java.lang.invoke.MethodHandles`:** उच्च-प्रदर्शन प्रत्यक्ष मेथड पॉइंटर्स जो JIT द्वारा इनलाइन किए जा सकते हैं।
+२. **जावा 9+ मॉड्यूल सिस्टम:** गैर-निर्यातित पैकेजों में रिफ्लेक्शन पहुंच को रोकता है जब तक कि JVM फ्लैग्स द्वारा अनुमति न दी जाए।
+
+## सीमा स्थितियां और प्रोडक्शन सुरक्षा
+
+१. **एक्सेप्शन रैपिंग:** रिफ्लेक्टेड मेथड द्वारा फेंका गया कोई भी अपवाद `InvocationTargetException` के अंदर लपेटा जाता है। मूल अपवाद निकालने के लिए `.getCause()` का उपयोग करें।
